<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="BallSeat_Inputs_typ" Id="{c8d614cc-e63b-0f02-1216-5fe934cc00dd}">
    <Declaration><![CDATA[TYPE BallSeat_Inputs_typ:
STRUCT
	BallClampOpened AT %I*: BOOL;
	BallClampClosed AT %I*: BOOL;
	BallSeatExtended AT %I*: BOOL;
	BallSeatRetracted AT %I*: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>