<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Kickout_Outputs_typ" Id="{1701c04b-cb1f-0bee-0e4e-ec4201215e18}">
    <Declaration><![CDATA[TYPE Kickout_Outputs_typ:
STRUCT
	BallClampOpen AT %Q*: BOOL;
	BallClampClose AT %Q*: BOOL;
	RemoveBall AT %Q*: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>